data ingestion component added

--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -224,12 +224,108 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cdc0821e",
+   "metadata": {},
+   "source": [
+    "# Download Data from gdrive"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d6f09e31",
+   "execution_count": 19,
+   "id": "9de51718",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import gdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "932494b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://drive.google.com/file/d/1liceh2Eaj-oGtbmIhCMBBPxhcUrchX6r/view?usp=sharing\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "b6d0baa1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "e295926c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1liceh2Eaj-oGtbmIhCMBBPxhcUrchX6r'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_id = url.split(\"/\")[-2]\n",
+    "file_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "371531ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From (original): https://drive.google.com/uc?/export=download&id=1liceh2Eaj-oGtbmIhCMBBPxhcUrchX6r\n",
+      "From (redirected): https://drive.google.com/uc?%2Fexport=download&id=1liceh2Eaj-oGtbmIhCMBBPxhcUrchX6r&confirm=t&uuid=167e9b48-da81-4596-88a9-1294c08608f7\n",
+      "To: f:\\Chest-Cancer-Classification-using-MLflow-and-DVC\\research\\chest-ct-scan-data.zip\n",
+      "100%|██████████| 49.0M/49.0M [00:03<00:00, 15.2MB/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'chest-ct-scan-data.zip'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prefix = \"https://drive.google.com/uc?/export=download&id=\"\n",
+    "gdown.download(prefix+file_id,\"chest-ct-scan-data.zip\")"
+   ]
   }
  ],
  "metadata": {
